--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     environment:
       MYSQL_DATABASE: directus_global
       MYSQL_USER: CMSAdmin
-      MYSQL_PASSWORD: &Fem1FRdyQXL8Dmy
-      MYSQL_ROOT_PASSWORD: &Fem1FRdyQXL8Dmy
+      MYSQL_PASSWORD: password123
+      MYSQL_ROOT_PASSWORD: password123
     ports:
       - 3306:3306
 
@@ -20,10 +20,10 @@ services:
     environment:
       KEY: my-secret-key
       ADMIN_EMAIL: roderick@boekdrukker.com
-      ADMIN_PASSWORD: 51VZrUdrrMje5E*u
+      ADMIN_PASSWORD: adminpassword
       DATABASE_CLIENT: mysql
       DATABASE_HOST: mysql
       DATABASE_PORT: 3306
       DATABASE_NAME: directus_global
       DATABASE_USER: CMSAdmin
-      DATABASE_PASSWORD: &Fem1FRdyQXL8Dmy
+      DATABASE_PASSWORD: password123
