--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,25 +5,21 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_DATABASE: directus_global
-      MYSQL_USER: CMSAdmin
-      MYSQL_PASSWORD: password123
-      MYSQL_ROOT_PASSWORD: password123
-    ports:
-      - 3306:3306
+      MYSQL_USER: cmsuser
+      MYSQL_PASSWORD: cmspass123
+      MYSQL_ROOT_PASSWORD: cmspass123
 
   directus:
     image: directus/directus:latest
-    ports:
-      - 8055:8055
     depends_on:
       - mysql
     environment:
-      KEY: my-secret-key
-      ADMIN_EMAIL: roderick@boekdrukker.com
-      ADMIN_PASSWORD: adminpassword
+      KEY: testsecret
+      ADMIN_EMAIL: admin@example.com
+      ADMIN_PASSWORD: admin123
       DATABASE_CLIENT: mysql
       DATABASE_HOST: mysql
       DATABASE_PORT: 3306
       DATABASE_NAME: directus_global
-      DATABASE_USER: CMSAdmin
-      DATABASE_PASSWORD: password123
+      DATABASE_USER: cmsuser
+      DATABASE_PASSWORD: cmspass123
