Fix: use infrastructure block for docker-compose

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,2 @@
-services:
-- type: web
-  name: directus
-  env: docker
-  plan: free
+infrastructure:
   dockerComposeFilePath: docker-compose.yml
-  autoDeploy: true
